--- a/people/Krauss.yml
+++ b/people/Krauss.yml
@@ -11,115 +11,59 @@ attributes:
     apps:
       - git-extras
       - git-flow
-      - nettle
-      - adobe-air-sdk
       - gtk+
       - node
       - ant
       - gtksourceview
-      - opencore-amr
-      - apple-gcc42
-      - harfbuzz
       - arping
       - htop-osx
       - hub
       - openssl
       - atk
-      - icu4c
-      - openssl098
       - autoconf
       - iftop
-      - p11-kit
       - automake
       - pango
       - brew-cask
-      - intltool
       - pbzip2
-      - cairo
-      - isl011
       - pixman
-      - jasper
-      - pkg-config
-      - cloog-ppl015
       - jmeter
       - cmake
-      - jp2a
       - pow
-      - confuse
       - jpeg
-      - ppl011
       - coreutils
       - lame
       - pstree
-      - dart
       - lftp
       - pv
       - ddrescue
-      - libao
-      - py2cairo
-      - eigen
-      - pygobject
-      - libevent
-      - pygtk
       - elasticsearch
-      - libffi
       - python3
       - findutils
-      - libgcrypt
-      - qt
-      - libgpg-error
-      - rarian
-      - flac
-      - libiconv
       - readline
-      - libksba
       - redis
       - fontconfig
-      - libmpc08
       - rhino
       - fping
-      - libnet
       - sbt
       - freetype
-      - libogg
       - scala
       - gawk
-      - libpng
-      - scons
-      - gcc46
-      - libsndfile
       - gdbm
-      - libtasn1
       - shmux
       - gdk-pixbuf
       - libtiff
-      - sntop
       - geoip
-      - libtool
-      - gettext
-      - libunistring
-      - sphinx
       - git
-      - libvorbis
       - sqlite
       - git-extras
-      - libxml2
-      - tbb
-      - libxslt
-      - glib
-      - libyaml
-      - tig
       - gmp
       - little-cms
       - tmux
-      - gmp4
       - lua
-      - tokyo-cabinet
       - gnu-getopt
-      - mad
       - tree
       - gnu-indent
-      - mariadb
       - watch
       - gnu-sed
       - meld
@@ -127,20 +71,16 @@ attributes:
       - gnu-tar
       - memcached
       - gnupg
-      - mercurial
-      - xmlrpc-c
       - gnutls
       - mongodb
-      - xz
-      - go
-      - mpfr2
-      - gobject-introspection
       - mutt
     cask_apps:
+      - xquartz
       - adium
       - angry-ip-scanner
       - atom
       - audacity
+      - adobe-air
       - blender
       - boot2docker
       - caffeine
@@ -164,7 +104,6 @@ attributes:
       - kindle
       - kismac
       - kompozer
-      - leap-motion
       - macfusion
       - mongohub
       - mou
